tests/paczka1/small_fuzzy/70999257.err
Error in line 3: PvlaI A575 0,2
Error in line 5: A277 A575 91,8
Error in line 4: PvlaI S47 49,7
Error in line 11: P3qd2Kw6RE S760 83,2
Error in line 12: P3qd2Kw6RE A277 32,5
